完成指标的批处理计算